src/style.css
:root{
    --green-1: #88D969;
    --green-2: #46CB18;
    --green-3: #06A10B;
    --green-4: #1D800E;

    --bison-yellow: #FFC82E;
    --bison-green: #015643;
    --bison-gray: #D3D3D3;

    --grad: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(148,148,148,1) 35%, rgba(0,212,255,1) 100%);
}

    *{
        box-sizing: border-box;
        margin: 0;
        padding: 0;
        font-family: sans-serif;
    }
    body{
        display: flex;
        flex-direction: column;
        font-size: 20px;
        background-color: var(--bison-green);
    }

    a{
        text-decoration: none;
        color: var(--bison-green);
        font-weight: 900;
        transition: .3s;
    }

    a:hover{
        color: var(--bison-yellow);
        cursor: pointer;
    }

    h1{
        font-size: 2.5em;
        font-weight: 900;
    }

    h2{
        font-size: 1.3em;
        font-weight: 500;
        color: var(--bison-yellow);
    }

    h3{
        font-size: 1.3em;
        font-weight: 900;
    }

    header{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        width: 100%;
        min-height: 100px;
        background-color: var(--bison-green);
        border-bottom: var(--bison-yellow) 20px solid;
        color: white;
        padding-top: 20px;
        padding-bottom: 10px;
        position: fixed;
        top:0;
        box-shadow: inset 0px -10px 20px 2px rgb(43 43 43 / 70%);
        
    }

    main{
        background-color: white;
        display: flex;
        flex-flow: row wrap;
        justify-content: center;
        align-items: flex-start;
        align-self: center;
        width:100%;
        min-height: 60vh;
        padding: 150px 10px 10px 10px;
        max-width: 1200px;
        border-right: var(--bison-yellow) 20px solid;
        border-left: var(--bison-yellow) 20px solid;
        
    }

    footer{
        width: 100%;
        min-height: 10vh;
        background-color: var(--bison-green);
        color: white;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
        align-items:center;
        border-top: var(--bison-yellow) 20px solid;
        padding-bottom: 10px;
        box-shadow: inset 0px 10px 20px 2px rgb(43 43 43 / 70%);
    }

    .intro{
        display: flex;
        flex: 1;
        flex-direction: column;
        font-size: 1.4em;
        line-height: 1.5;
        padding: 10px;
        margin: 20px;
        min-height: 400px;
        flex: 1;
    }
    .intro span{
        font-size: 1.3em;
        font-weight: 700;
        display: block;
    }

    .connect{
        display: flex;
        
        flex-direction: column;
        border-left: var(--bison-gray) 20px solid;
        /*border-bottom: var(--bison-gray) 20px solid;*/
        padding: 10px;
        margin: 20px;
        
        flex: 1;
    }

    .connect span{
        font-size: 1.3em;
        font-weight: 700;
    }

    .connect ul{
        list-style: none;
    }

    .connect ul li{
        padding-top: 30px;
        font-size: 1.3em;
    }

    #background{
        flex: 0 0 100%;
    }


    #profile{
        border-radius: 50%;
        width: 100%;
        max-width: 300px;
        height: auto;
        margin: 15px;
        border: 7px solid var(--bison-gray);
        align-self: flex-start;

    }

    footer span.bot img{
        width: 100%;
        max-width: 30px;
        height: auto;
        padding: 5px 5px 0 0;
    }

    @media (max-width:800px){
        
        #profile{
            align-self: center;
            
        }
        main{
            flex-flow: column;
        }
        .intro{
            font-size: 1.3em;
        }

        .connect{
            width: 100%;
            border-top: var(--bison-gray) 10px solid;
            padding: 0 0 10px 10px;
            margin: 1px 0 10px 0;
        }
    }

    @media (max-width: 500px){
        
        body{
            font-size: 16px;
        }

        main{
            margin-top: 100px;
        }

        .intro{
            padding: 5px;
            line-height: 1.3;
        }

        h1{
            font-size: 1.5em;
        }

        h2, h3{
            font-size: 1.1em;
        }
        #profile{
            object-fit: cover;
        }
        

    }

    @media (max-width:250px){
        *{
            padding: 0;
            margin: 0;
        }
    }

